jswt-semantics/src/locals/snapshots/jswt_semantics__locals__test__context_errors_on_this_outside_class.snap
---
source: jswt-semantics/src/locals/mod.rs
expression: local
---
LocalSemanticResolver {
    environment: SemanticEnvironment {
        bindings: SemanticBindingsTable {
            bindings: {},
        },
        symbols: ScopedSymbolTable {
            scopes: [
                Span {
                    file: "program",
                    module: "root",
                    start: 0,
                    end: 0,
                },
            ],
            files: [],
            table: {
                Span {
                    file: "program",
                    module: "root",
                    start: 0,
                    end: 0,
                }: Scope {
                    symbols: {
                        "foo": Function(
                            Function {
                                name: "foo",
                                params: [],
                                ret: Binding(
                                    "void",
                                ),
                            },
                        ),
                    },
                    ret: None,
                },
                Span {
                    file: "test_context_errors_on_this_outside_class",
                    module: "module/test_context_errors_on_this_outside_class",
                    start: 28,
                    end: 65,
                }: Scope {
                    symbols: {},
                    ret: None,
                },
            },
        },
        types: TypeMap {
            types: {},
        },
    },
    errors: [
        ThisOutsideClass {
            span: Span {
                file: "test_context_errors_on_this_outside_class",
                module: "module/test_context_errors_on_this_outside_class",
                start: 46,
                end: 50,
            },
        },
    ],
    class: None,
}
