jswt-semantics/src/locals/snapshots/jswt_semantics__locals__test__function_parameter_redefinition.snap
---
source: jswt-semantics/src/locals/mod.rs
expression: local
---
LocalSemanticResolver {
    environment: SemanticEnvironment {
        bindings: SemanticBindingsTable {
            bindings: {},
        },
        symbols: ScopedSymbolTable {
            scopes: [
                Span {
                    file: "program",
                    module: "root",
                    start: 0,
                    end: 0,
                },
            ],
            files: [],
            table: {
                Span {
                    file: "program",
                    module: "root",
                    start: 0,
                    end: 0,
                }: Scope {
                    symbols: {
                        "test": Function(
                            Function {
                                name: "test",
                                params: [
                                    Parameter {
                                        name: "x",
                                        ty: Binding(
                                            "i32",
                                        ),
                                    },
                                    Parameter {
                                        name: "x",
                                        ty: Binding(
                                            "i32",
                                        ),
                                    },
                                ],
                                ret: Binding(
                                    "void",
                                ),
                            },
                        ),
                    },
                    ret: None,
                },
                Span {
                    file: "test_function_parameter_redefinition",
                    module: "module/test_function_parameter_redefinition",
                    start: 39,
                    end: 50,
                }: Scope {
                    symbols: {
                        "x": Variable(
                            Variable {
                                declaration: Span {
                                    file: "test_function_parameter_redefinition",
                                    module: "module/test_function_parameter_redefinition",
                                    start: 23,
                                    end: 29,
                                },
                                initialization: None,
                                name: "x",
                                ty: Binding(
                                    "i32",
                                ),
                                is_mutable: true,
                            },
                        ),
                    },
                    ret: None,
                },
            },
        },
        types: TypeMap {
            types: {
                Span {
                    file: "test_function_parameter_redefinition",
                    module: "module/test_function_parameter_redefinition",
                    start: 23,
                    end: 29,
                }: Binding(
                    "i32",
                ),
            },
        },
    },
    errors: [
        VariableAlreadyDefined {
            name: "x",
            span: Span {
                file: "test_function_parameter_redefinition",
                module: "module/test_function_parameter_redefinition",
                start: 31,
                end: 37,
            },
        },
    ],
    class: None,
}
