jswt-semantics/src/locals/snapshots/jswt_semantics__locals__test__local_context_error_on_undefined_variable.snap
---
source: jswt-semantics/src/locals/mod.rs
expression: local
---
LocalSemanticResolver {
    environment: SemanticEnvironment {
        bindings: SemanticBindingsTable {
            bindings: {},
        },
        symbols: ScopedSymbolTable {
            scopes: [
                Span {
                    file: "program",
                    module: "root",
                    start: 0,
                    end: 0,
                },
            ],
            files: [],
            table: {
                Span {
                    file: "program",
                    module: "root",
                    start: 0,
                    end: 0,
                }: Scope {
                    symbols: {
                        "test": Function(
                            Function {
                                name: "test",
                                params: [],
                                ret: Binding(
                                    "void",
                                ),
                            },
                        ),
                    },
                    ret: None,
                },
                Span {
                    file: "test_local_context_error_on_undefined_variable",
                    module: "module/test_local_context_error_on_undefined_variable",
                    start: 25,
                    end: 51,
                }: Scope {
                    symbols: {},
                    ret: None,
                },
            },
        },
        types: TypeMap {
            types: {},
        },
    },
    errors: [
        SymbolNotDefined {
            name: "x",
            span: Span {
                file: "test_local_context_error_on_undefined_variable",
                module: "module/test_local_context_error_on_undefined_variable",
                start: 39,
                end: 40,
            },
        },
    ],
    class: None,
}
